# singularity

./: CLAUDE.md
backend/: README.md  demo.py  pyproject.toml
backend/agentic_layer/: __init__.py  agent_types.py  agents.py  core.py  layer.py  orchestrator.py  tools_manager.py
backend/agentic_layer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
